# AdvanceRAG_System

./: pyproject.toml  requirements.txt
app/: main.py
app/Generation/: generator.py
app/agents/: query_gate.py  states.py
app/apis/: load_data.py  search.py  upload_pdf.py
app/configs/: qdrant.py  source_aware_labels.py
app/data/: data_loader.py
app/db/: init_db.py  postgresql.py  queries.py
app/embeddings/: embedder.py
app/evaluation/: evaluator.py  hallucination_checker.py
app/ingestions/: buildmeta_data.py  chunks.py  loader.py  pipeline.py
app/llm/: ollama_llm.py
app/prompts/: rag_prompt.py
app/pydantics/: document_chunks.py
app/queue/: publisher.py  rabbitmq.py  worker.py
app/reranking/: reranker.py
app/retrieval/: collection_maper.py  context_builder.py  create_collection.py  indexer.py  query_rewriter.py  retrieve_confluence.py  retrieve_firefiles.py  retrieve_github.py  retrieve_gmail.py  retrieve_jira.py  retrieve_slack.py  schema.py  search.py
app/utils/: source_parser.py
