[project]
name = "advance-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "fastembed>=0.8.0",
    "langchain>=1.3.1",
    "langchain-community>=0.4.2",
    "langchain-huggingface>=1.2.2",
    "langchain-ollama>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pypdf>=6.12.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.29",
    "qdrant-client>=1.18.0",
    "sentence-transformers>=5.5.1",
    "tiktoken>=0.13.0",
    "torch>=2.12.0",
    "uvicorn>=0.47.0",
]
