[project]
name = "advance-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "aio-pika>=9.6.2",
    "asyncpg>=0.31.0",
    "datasets==2.20.0",
    "fastapi==0.115.0",
    "fastembed==0.3.6",
    "gliner>=0.2.26",
    "langchain==0.2.16",
    "langchain-community==0.2.16",
    "langchain-core==0.2.38",
    "langchain-huggingface==0.0.3",
    "langchain-ollama==0.1.3",
    "langgraph>=0.2.19",
    "numpy==1.26.4",
    "pandas==2.2.2",
    "pypdf==4.3.1",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.9",
    "qdrant-client==1.11.1",
    "ragas==0.1.21",
    "sentence-transformers==3.0.1",
    "tiktoken==0.7.0",
    "torch==2.4.1",
    "uvicorn==0.30.6",
]
